# balistics

./: .gitignore  Cargo.toml  README.md  commit.msg  compile.sh  deploy.sh  index.html
pages/: balistics.wasm  index.html
src/: controls.rs  drag.rs  main.rs  projectile.rs
