[package]
name = "balistics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3

[dependencies]
glam = "0.18.0"
macroquad = "0.3.10" # https://crates.io/crates/macroquad

# cargo build --target wasm32-unknown-unknown
# basic-http-server .
